modify sales-transactions filter
